{
  "version": 4,
  "terraform_version": "1.5.1",
  "serial": 75,
  "lineage": "c57ba15e-7b74-b60e-3f63-f613c7a7dc49",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_firewall_policy_rule_collection_group",
      "name": "policy_group_subnet_mgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].subscription_hub",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "application_rule_collection": [
              {
                "action": "Allow",
                "name": "app_rules_lzaks-spoke-mgt-wcus",
                "priority": 305,
                "rule": [
                  {
                    "description": "",
                    "destination_addresses": [],
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "*"
                    ],
                    "destination_urls": [],
                    "name": "allow_internet",
                    "protocols": [
                      {
                        "port": 80,
                        "type": "Http"
                      },
                      {
                        "port": 443,
                        "type": "Https"
                      }
                    ],
                    "source_addresses": [
                      "10.20.0.0/24"
                    ],
                    "source_ip_groups": [],
                    "terminate_tls": false,
                    "web_categories": []
                  }
                ]
              }
            ],
            "firewall_policy_id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-hub/providers/Microsoft.Network/firewallPolicies/firewall-policy",
            "id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-hub/providers/Microsoft.Network/firewallPolicies/firewall-policy/ruleCollectionGroups/firewall_policy_group_lzaks-spoke-mgt-wcus",
            "name": "firewall_policy_group_lzaks-spoke-mgt-wcus",
            "nat_rule_collection": [],
            "network_rule_collection": [],
            "priority": 300,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet_vm",
            "azurerm_virtual_network.vnet_spoke_mgt",
            "data.terraform_remote_state.hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route",
      "name": "route_to_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "0.0.0.0/0",
            "id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-spoke-mgt-wcus-spoke-mgt-wcus/providers/Microsoft.Network/routeTables/route-table-to-firewall/routes/route-to-firewall",
            "name": "route-to-firewall",
            "next_hop_in_ip_address": "172.16.0.4",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "rg-lzaks-spoke-mgt-wcus-spoke-mgt-wcus",
            "route_table_name": "route-table-to-firewall",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_route_table.route_table_to_firewall",
            "data.terraform_remote_state.hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "route_table_to_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": true,
            "id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-spoke-mgt-wcus-spoke-mgt-wcus/providers/Microsoft.Network/routeTables/route-table-to-firewall",
            "location": "westcentralus",
            "name": "route-table-to-firewall",
            "resource_group_name": "rg-lzaks-spoke-mgt-wcus-spoke-mgt-wcus",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "route-to-firewall",
                "next_hop_in_ip_address": "172.16.0.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-spoke-mgt-wcus-spoke-mgt-wcus/providers/Microsoft.Network/virtualNetworks/vnet-lzaks-spoke-mgt-wcus/subnets/subnet-vm"
            ],
            "tags": {
              "architecture": "Hub\u0026Spoke",
              "environment": "development",
              "source": "terraform"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.20.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-spoke-mgt-wcus-spoke-mgt-wcus/providers/Microsoft.Network/virtualNetworks/vnet-lzaks-spoke-mgt-wcus/subnets/subnet-vm",
            "name": "subnet-vm",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-lzaks-spoke-mgt-wcus-spoke-mgt-wcus",
            "virtual_network_name": "vnet-lzaks-spoke-mgt-wcus"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet_spoke_mgt",
            "data.terraform_remote_state.hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "association_route_table_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-spoke-mgt-wcus-spoke-mgt-wcus/providers/Microsoft.Network/virtualNetworks/vnet-lzaks-spoke-mgt-wcus/subnets/subnet-vm",
            "route_table_id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-spoke-mgt-wcus-spoke-mgt-wcus/providers/Microsoft.Network/routeTables/route-table-to-firewall",
            "subnet_id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-spoke-mgt-wcus-spoke-mgt-wcus/providers/Microsoft.Network/virtualNetworks/vnet-lzaks-spoke-mgt-wcus/subnets/subnet-vm"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_route_table.route_table_to_firewall",
            "azurerm_subnet.subnet_vm",
            "azurerm_virtual_network.vnet_spoke_mgt",
            "data.terraform_remote_state.hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet_spoke_mgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.20.0.0/16"
            ],
            "dns_servers": [
              "172.16.0.4"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "f62b4a3c-f10a-4185-ab68-8aaa190c829a",
            "id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-spoke-mgt-wcus-spoke-mgt-wcus/providers/Microsoft.Network/virtualNetworks/vnet-lzaks-spoke-mgt-wcus",
            "location": "westcentralus",
            "name": "vnet-lzaks-spoke-mgt-wcus",
            "resource_group_name": "rg-lzaks-spoke-mgt-wcus-spoke-mgt-wcus",
            "subnet": [
              {
                "address_prefix": "10.20.0.0/24",
                "id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-spoke-mgt-wcus-spoke-mgt-wcus/providers/Microsoft.Network/virtualNetworks/vnet-lzaks-spoke-mgt-wcus/subnets/subnet-vm",
                "name": "subnet-vm",
                "security_group": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-spoke-mgt-wcus-spoke-mgt-wcus/providers/Microsoft.Network/networkSecurityGroups/vnet-lzaks-spoke-mgt-wcus-subnet-vm-nsg-westcentralus"
              }
            ],
            "tags": {
              "architecture": "Hub\u0026Spoke",
              "environment": "development",
              "source": "terraform"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "data.terraform_remote_state.hub"
          ]
        }
      ]
    },
    {
      "module": "module.virtual_network_peering_hub_and_spoke_mgt[0]",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "vnet_peering_hub_to_spoke",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-hub/providers/Microsoft.Network/virtualNetworks/vnet-hub/virtualNetworkPeerings/vnet_peering_hub_to_vnet-lzaks-spoke-mgt-wcus",
            "name": "vnet_peering_hub_to_vnet-lzaks-spoke-mgt-wcus",
            "remote_virtual_network_id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-spoke-mgt-wcus-spoke-mgt-wcus/providers/Microsoft.Network/virtualNetworks/vnet-lzaks-spoke-mgt-wcus",
            "resource_group_name": "rg-lzaks-hub",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-hub"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet_spoke_mgt",
            "data.terraform_remote_state.hub"
          ]
        }
      ]
    },
    {
      "module": "module.virtual_network_peering_hub_and_spoke_mgt[0]",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "vnet_peering_spoke_to_hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-spoke-mgt-wcus-spoke-mgt-wcus/providers/Microsoft.Network/virtualNetworks/vnet-lzaks-spoke-mgt-wcus/virtualNetworkPeerings/vnet_peering_vnet-lzaks-spoke-mgt-wcus_to_hub",
            "name": "vnet_peering_vnet-lzaks-spoke-mgt-wcus_to_hub",
            "remote_virtual_network_id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-hub/providers/Microsoft.Network/virtualNetworks/vnet-hub",
            "resource_group_name": "rg-lzaks-spoke-mgt-wcus-spoke-mgt-wcus",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-lzaks-spoke-mgt-wcus"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet_spoke_mgt",
            "data.terraform_remote_state.hub"
          ]
        }
      ]
    },
    {
      "module": "module.vm_jumpbox_linux[0]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-spoke-mgt-wcus-spoke-mgt-wcus-linux/providers/Microsoft.Network/networkInterfaces/nic-vm",
            "internal_domain_name_suffix": "hrfcx3qk4gcudk1irkvbsdectc.yx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.20.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-spoke-mgt-wcus-spoke-mgt-wcus/providers/Microsoft.Network/virtualNetworks/vnet-lzaks-spoke-mgt-wcus/subnets/subnet-vm"
              }
            ],
            "location": "westcentralus",
            "mac_address": "00-0D-3A-F8-9F-0A",
            "name": "nic-vm",
            "private_ip_address": "10.20.0.4",
            "private_ip_addresses": [
              "10.20.0.4"
            ],
            "resource_group_name": "rg-lzaks-spoke-mgt-wcus-spoke-mgt-wcus-linux",
            "tags": {
              "architecture": "Hub\u0026Spoke",
              "environment": "development",
              "source": "terraform"
            },
            "virtual_machine_id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-spoke-mgt-wcus-spoke-mgt-wcus-linux/providers/Microsoft.Compute/virtualMachines/vm-jumpbox-linux"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet_vm",
            "azurerm_virtual_network.vnet_spoke_mgt",
            "data.terraform_remote_state.hub",
            "module.vm_jumpbox_linux.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.vm_jumpbox_windows[0]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-spoke-mgt-wcus-spoke-mgt-wcus-win/providers/Microsoft.Network/networkInterfaces/nic-vm-jumpbox-windows",
            "internal_domain_name_suffix": "hrfcx3qk4gcudk1irkvbsdectc.yx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.20.0.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-spoke-mgt-wcus-spoke-mgt-wcus/providers/Microsoft.Network/virtualNetworks/vnet-lzaks-spoke-mgt-wcus/subnets/subnet-vm"
              }
            ],
            "location": "westcentralus",
            "name": "nic-vm-jumpbox-windows",
            "private_ip_address": "10.20.0.5",
            "private_ip_addresses": [
              "10.20.0.5"
            ],
            "resource_group_name": "rg-lzaks-spoke-mgt-wcus-spoke-mgt-wcus-win",
            "tags": {
              "architecture": "Hub\u0026Spoke",
              "environment": "development",
              "source": "terraform"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet_vm",
            "module.vm_jumpbox_windows.azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}